--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -1,4 +1,4 @@
 :schedule:
   update_user_information_job:
-    cron: '0 * * * * *'   # Runs once per minute
+    cron: '0 0 * * * *'   # Runs once per hour
     class: UpdateUserInformationJob 
