--- a/config/database.yml
+++ b/config/database.yml
@@ -18,6 +18,11 @@ test:
 production: &deploy
   encoding: utf8
   min_messages: warning
+  adapter: postgresql
+  database: budget-tracker-rails
   pool: <%= [Integer(ENV.fetch("MAX_THREADS", 5)), Integer(ENV.fetch("DB_POOL", 5))].max %>
   timeout: 5000
-  url: <%= ENV.fetch("DATABASE_URL", "") %>
+  username: <%= ENV["DB_USER"] || 'postgres' %>
+  password: <%= ENV["DB_PASSWORD"] || '' %>
+  host: <%= ENV["DB_HOST"] || "127.0.0.1" %>
+  port: <%= ENV["DB_PORT"] || 5432 %>
