--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,15 @@
+
 ---
 version: '3'
 services:
-  postgresql:
-    image: postgres:11.3
-    ports:
-    - 5432
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: ''
-    volumes:
-    - postgresql_data:/var/lib/postgresql/data
-volumes:
-  postgresql_data: 
+    web:
+      build: .
+      command: bash -c "bundle exec puma -C config/puma.rb"
+      volumes:
+        - .:/ruterocl
+      ports:
+        - "3000:3000"
+      # depends_on:
+      #   - db
+      env_file:
+        - ./.env
